--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,81 @@
     --border-radius-rounded: 50%;
 }
 
-
-
-
-:body {
-
-
+/* general */
+html, body {
+    font-size: 16px;
+    line-height: 1,5;
+    font-family: var(--font-roboto);
+    font-weight: var(--font-weight-regular);
+    color: var(--color-theme-dark);
 }
+
+
+/* top-menu */
+.top-menu {
+    background-color: var(--color-theme);
+    color: var(--color-white);
+    height: 40px;
+}
+    .top-menu > .container {
+        height: 100%;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .top-menu a {
+        color: var(--color-white);
+        text-decoration: none;
+        margin: 0 1.2rem;
+    }
+    .top-menu a:hover {
+        color: var(--color-theme-dark);
+    }
+
+    .top-menu .social-media {
+        margin: 0,5rem;
+    }
+       .top-menu .social-media a {
+           margin: 0 0.3rem;
+        }
+          .top-menu .social-media a:last-child {
+              margin: 0 0 0 0.3rem;
+           }
+
+    .top-menu .site-settings {
+        display: flex;
+    }
+
+
+    .top-menu .dropdown-theme {
+        background-color: var(--color-theme);
+        color: var(--color-white);
+    }
+       .top-menu .dropdown-theme button {
+           background-color: var(--color-theme);
+           color: var(--color-white);
+           border: none;
+        }
+          .top-menu .dropdown-theme button:hover {
+              color: var(--color-theme-dark);
+           }
+
+        .top-menu .dropdown-theme .dropdown-menu {
+            background-color: var(--color-theme);
+            color: var(--color-white);
+            border: none;
+            width: 250px;
+            margin-top: 3rem;
+        }
+
+              .top-menu .dropdown-theme .dropdown-menu .dropdown-item {
+                   margin: 0;
+                   background-color: var(--color-theme);
+                   color: var(--color-white);
+                   border: none;
+                   width: 100%
+               }
+
+
+
+        
