--- a/css/style.css
+++ b/css/style.css
@@ -53,59 +53,82 @@ html, body {
         justify-content: space-between;
         align-items: center;
     }
-    .top-menu a {
-        color: var(--color-white);
-        text-decoration: none;
-        margin: 0 1.2rem;
-    }
-    .top-menu a:hover {
-        color: var(--color-theme-dark);
-    }
-
-    .top-menu .social-media {
-        margin: 0,5rem;
-    }
-       .top-menu .social-media a {
-           margin: 0 0.3rem;
-        }
-          .top-menu .social-media a:last-child {
-              margin: 0 0 0 0.3rem;
-           }
 
     .top-menu .site-settings {
         display: flex;
     }
-
-
-    .top-menu .dropdown-theme {
+    .top-menu .site-settings .dropdown-theme {
         background-color: var(--color-theme);
         color: var(--color-white);
     }
-       .top-menu .dropdown-theme button {
+       .top-menu .site-settings .dropdown-theme button {
            background-color: var(--color-theme);
            color: var(--color-white);
            border: none;
         }
-          .top-menu .dropdown-theme button:hover {
-              color: var(--color-theme-dark);
-           }
-
-        .top-menu .dropdown-theme .dropdown-menu {
+           .top-menu .site-settings .dropdown-theme button:hover {
+               color: var(--color-theme-dark);
+            }
+        .top-menu .site-settings .dropdown-theme .dropdown-menu {
             background-color: var(--color-theme);
             color: var(--color-white);
             border: none;
             width: 250px;
             margin-top: 3rem;
         }
+            .top-menu .site-settings .dropdown-theme .dropdown-menu .dropdown-item {
+                background-color: var(--color-theme);
+                color: var(--color-white);
+                border: none;
+                margin: 0;
+                width: 100%
+                margin: 0;
+            }
+                .top-menu .site-settings .dropdown-theme .dropdown-menu .dropdown-item:hover{
+                    background-color: var(--color-theme-dark);
+                    color: var(--color-white);
+                }
 
-              .top-menu .dropdown-theme .dropdown-menu .dropdown-item {
-                   margin: 0;
-                   background-color: var(--color-theme);
-                   color: var(--color-white);
-                   border: none;
-                   width: 100%
-               }
+    .top-menu .menu-links {
+    }
+
+    .top-menu .menu-links .links {
+        display: none;
+    }
 
 
+    .top-menu .menu-links a {
+        color: var(--color-white);
+        text-decoration: none;
+        margin: 0 1.2rem;
+    }
+    .top-menu .menu-links a:hover {
+        color: var(--color-theme-dark);
+    }
 
-        
+    .top-menu .menu-links .social-media {
+        margin: 1rem;
+        font-size: var(--font-size-14);
+    }
+       .top-menu .menu-links .social-media a {
+           margin: 0 0.3rem;
+        }
+          .top-menu .menu-links .social-media a:last-child {
+              margin: 0 0 0 0.3rem;
+           }
+
+@media (min-width: 578px) {
+    .top-menu .menu-links {
+        display: block;
+    }
+}
+
+@media (min-width:992px) {
+    .top-menu > .container {
+        justify-content: space-between;
+    }
+
+    .top-menu > .container {
+        display: inline;
+    }
+}
