--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ html, body {
     .top-menu > .container {
         height: 100%;
         display: flex;
-        justify-content: space-between;
+        justify-content: end;
         align-items: center;
     }
 
@@ -65,6 +65,7 @@ html, body {
            background-color: var(--color-theme);
            color: var(--color-white);
            border: none;
+           padding: 0;
         }
            .top-menu .site-settings .dropdown-theme button:hover {
                color: var(--color-theme-dark);
@@ -89,9 +90,11 @@ html, body {
                     color: var(--color-white);
                 }
 
-    .top-menu .menu-links {
-    }
 
+    .top-menu .menu-links {
+       display: none;
+    }
+                
     .top-menu .menu-links .links {
         display: none;
     }
@@ -117,18 +120,98 @@ html, body {
               margin: 0 0 0 0.3rem;
            }
 
+
+
+/* main-menu */
+
+.main-menu {
+    background-color: var(--color-white);
+    color: var(--color-theme-dark);
+}
+
+    .main-menu .container {
+         display: flex;
+         justify-content: space-between;
+         align-items: center;
+         padding-top: 2.2rem;
+         padding-bottom: 2.2rem;
+    }
+
+    .main-menu .brand {
+         flex: 2;
+    }
+
+    .main-menu .search {
+         flex: 4;
+    }
+
+    .main-menu .menu-links {
+         flex: 3;
+         display: flex;
+         justify-content: end;
+         align-items: center;
+    }
+
+        .main-menu .menu-links .menu-link {
+             text-decoration: none;
+             color: var(--color-theme-dark);
+             margin: 0 0.8rem;
+        }
+            .main-menu .menu-links .menu-link:hover {
+                 color: var(--color-theme);
+            }
+            .main-menu .menu-links .menu-link:first-child {
+                 margin: 0 2rem 0 0rem;
+            }
+            .main-menu .menu-links .menu-link:last-child {
+                 margin: 0 0 0 0,8rem;
+            }
+
+        .main-menu .menu-links .menu-link i {
+             font-size: var(--font-size-16);
+
+        }
+
+    .main-menu nav {
+         border-top: 1px solid var(--color-gray-1);
+    }
+        .main-menu > nav > .container {
+             display: flex;
+             justify-content: space-between;
+             align-items: center;
+        }
+
+        .main-menu nav .browse-categories {
+              flex: 2;
+        }
+        .main-menu nav .special-offer {
+             flex: 7;
+             display: flex;
+             justify-content: end;
+             align-items: center;
+
+        }
+
+
+
+
+
+
+
+
+
 @media (min-width: 578px) {
     .top-menu .menu-links {
         display: block;
     }
-}
 
-@media (min-width:992px) {
     .top-menu > .container {
         justify-content: space-between;
     }
+}
 
-    .top-menu > .container {
+@media (min-width:992px) {
+    .top-menu .menu-links .links {
         display: inline;
     }
 }
