--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,19 @@ html, body {
     color: var(--color-theme-dark);
 }
 
+.btn-theme {
+    background-color: var(--color-theme);
+    color: var(--color-white);
+    border-radius: var(--border-radius-medium);
+    font-weight: var(--font-weight-medium);
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+}
+
+    .btn-theme:hover {
+        background-color: var(--color-theme-dark);
+        color: var(--color-white);
+    }
 
 /* top-menu */
 .top-menu {
@@ -173,17 +186,48 @@ html, body {
         }
 
     .main-menu nav {
-         border-top: 1px solid var(--color-gray-1);
+         border-top: 1px solid var(--color-gray-2);
+         border-bottom: 1px solid var(--color-gray-2)
     }
         .main-menu > nav > .container {
              display: flex;
              justify-content: space-between;
              align-items: center;
+             padding: 0;
         }
 
         .main-menu nav .browse-categories {
               flex: 2;
         }
+            
+              .main-menu nav .browse-categories button {
+                   background-color: var(--color-theme);
+                   border: none;
+                   color: var(--color-white);
+                   font-size: 1rem;
+                   width: 100%;
+                   display: flex;
+                   justify-content: space-between;
+                   align-items: center;
+                   padding: 0.7rem 1rem;
+                
+                }
+                  .main-menu nav .browse-categories button:hover {
+                    background-color: var(--color-theme-dark);
+                    color: var(--color-white);
+                  }
+
+                  .main-menu nav .browse-categories button span {
+                    display: flex;
+                    align-items: center;
+                  }
+
+                  .main-menu nav .browse-categories button > span > i {
+                    font-size: 1.4em;
+                  }
+
+
+
         .main-menu nav .special-offer {
              flex: 7;
              display: flex;
