--- a/css/style.css
+++ b/css/style.css
@@ -331,6 +331,37 @@ html, body {
     }
 }
 
+/* webshop-info */
+
+.webshop-info {
+    padding: 4rem 0;
+}
+    .webshop-info .container {
+        max-width: 1600px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .webshop-info .info-box {
+        background-color: var(--color-theme-light);
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        margin: 0 1rem;
+        flex: 1;
+    }
+        .webshop-info .info-box img {
+            margin-right: 1.5rem;
+        }
+        .webshop-info .info-box h1 {
+            color: var(--color-theme);
+            font-size: 1rem;
+            font-weight: var(--font-weight-medium);
+        }
+
+
+
+
 @media (min-width: 1200px) {
     .showcase .showcase-body {
         flex: 1;
