--- a/css/style.css
+++ b/css/style.css
@@ -160,11 +160,11 @@ html, body {
 }
 
     .main-menu .container {
-         display: flex;
-         justify-content: space-between;
-         align-items: center;
-         padding-top: 2.2rem;
-         padding-bottom: 2.2rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 2.2rem;
+        padding-bottom: 2.2rem;
     }
 
     .main-menu .brand {
@@ -199,7 +199,6 @@ html, body {
 
         .main-menu .menu-links .menu-link i {
              font-size: var(--font-size-16);
-
         }
 
     .main-menu nav {
@@ -227,8 +226,7 @@ html, body {
                    justify-content: space-between;
                    align-items: center;
                    padding: 0.7rem 1rem;
-                
-                }
+               }
                   .main-menu nav .browse-categories button:hover {
                     background-color: var(--color-theme-dark);
                     color: var(--color-white);
@@ -293,6 +291,51 @@ html, body {
     }    
 
 
+
+
+/* webshop-info */
+
+.webshop-info {
+    padding: 4rem 0;
+}
+    .webshop-info .container {
+        max-width: 1600px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    .webshop-info .info-box {
+        background-color: var(--color-theme-light);
+        padding: 1rem;
+        display: flex;
+        align-items: center;
+        margin: 0 1rem;
+        flex: 1;
+        border-radius: var(--border-radius-small);
+    }
+        .webshop-info .info-box:hover {
+            background-color: var(--color-theme);
+            color: var(--color-white);
+        }
+
+        .webshop-info .info-box img {
+            margin-right: 1.5rem;
+        }
+            .webshop-info .info-box:hover img {
+                filter: brightness(1000%);
+            }
+
+
+        .webshop-info .info-box h1 {
+            color: var(--color-theme);
+            font-size: 1rem;
+            font-weight: var(--font-weight-medium);
+        }
+            .webshop-info .info-box:hover h1 {
+                color: var(--color-white);
+            }
+
+
 @media (min-width: 578px) {
     .top-menu .menu-links {
         display: block;
@@ -331,35 +374,6 @@ html, body {
     }
 }
 
-/* webshop-info */
-
-.webshop-info {
-    padding: 4rem 0;
-}
-    .webshop-info .container {
-        max-width: 1600px;
-        display: flex;
-        justify-content: space-evenly;
-    }
-
-    .webshop-info .info-box {
-        background-color: var(--color-theme-light);
-        padding: 1rem;
-        display: flex;
-        align-items: center;
-        margin: 0 1rem;
-        flex: 1;
-    }
-        .webshop-info .info-box img {
-            margin-right: 1.5rem;
-        }
-        .webshop-info .info-box h1 {
-            color: var(--color-theme);
-            font-size: 1rem;
-            font-weight: var(--font-weight-medium);
-        }
-
-
 
 
 @media (min-width: 1200px) {
@@ -394,5 +408,8 @@ html, body {
     }
     .main-menu .container .special-offer {
         display: none;
+    }
+    .webshop-info .container {
+        flex-direction: column;
     }
 }
