--- a/css/style.css
+++ b/css/style.css
@@ -73,6 +73,10 @@ html, body {
     background-color: var(--color-theme);
 }
 
+.text-theme {
+    color: var(--color-theme);
+}
+
 .instock {
     color: var(--color-product-instock);
 }
@@ -476,6 +480,11 @@ html, body {
 .new-arrivals {
     padding-top: 6rem;
 }
+
+.new-arrivals .col {
+    display: flex;
+    justify-content: center;
+}
     .new-arrivals .card {
         position: relative;
         height: 400px;
@@ -492,6 +501,7 @@ html, body {
         position: absolute;
         bottom: 0;
         height: 14%;
+        width: 100%;
         color: var(--color-white);
         z-index: 1;
         transition: 0.3s ease-in-out;
@@ -505,6 +515,7 @@ html, body {
             font-size: 1.125rem;
             margin-bottom: 1rem;
             transition: 0.3s ease-in-out;
+            font-weight: var(--font-weight-regular);
         }
             .new-arrivals .card:hover .card-body h1 {
                 margin-bottom: 0;
@@ -520,6 +531,17 @@ html, body {
             margin: 0.5rem 0;
         }
     
+        .new-arrivals .card .card-body .card-old-price {
+            text-decoration: line-through;
+            margin: 0;
+        }
+        .new-arrivals .card .card-body .card-discount-price {
+            color: var(--color-theme);
+            font-weight: var(--font-weight-medium);
+            font-size: 1.5em;
+            margin: 0;
+        }
+
     .new-arrivals .card .card-background {
         position: absolute;
         bottom: 0;
