--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,8 @@ html, body {
     padding-right: 1.75rem;
 }
     .btn-theme-dark:hover {
-        background-color: var(--color-theme);
-        color: var(--color-white);
+        background-color: var(--color-white);
+        color: var(--color-theme);
     }
 
 .btn-white {
@@ -599,10 +599,10 @@ html, body {
 
 
 
-
+/*--------------------------SHOWCASE-2------------------------------*/
 
 .showcase-2 {
-    background-color: var(--color-gray-3);
+    background-color: var(--color-gray-1);
     margin-top: 6rem;
 }
 .showcase-2 .container {
@@ -646,6 +646,184 @@ html, body {
  }
 
 
+/*----------------------FEATURED-PRODUCTS---------------*/
+
+.featured-products {
+    padding-top: 6rem;
+}
+
+.featured-products .col {
+    display: flex;
+    justify-content: center;
+}
+    .featured-products .card {
+        position: relative;
+        height: 400px;
+        width: 350px;
+        overflow: hidden;
+        background-color: var(--color-gray-4);
+    }
+
+    .featured-products .card img {
+        height: 400px;
+    }
+
+    .featured-products .card .card-body {
+        position: absolute;
+        bottom: 0;
+        height: 14%;
+        width: 100%;
+        color: var(--color-white);
+        z-index: 1;
+        transition: 0.3s ease-in-out;
+        font-size: 1rem;
+    }
+        .featured-products .card:hover .card-body {
+            height: 40%;
+        }
+
+        .featured-products .card .card-body h1 {
+            font-size: 1.125rem;
+            margin-bottom: 1rem;
+            transition: 0.3s ease-in-out;
+            font-weight: var(--font-weight-regular);
+        }
+            .featured-products .card:hover .card-body h1 {
+                margin-bottom: 0;
+            }
+
+        .featured-products .card .card-body button {
+            background-color: transparent;
+            color: var(--color-white);
+            border: 1px solid var(--color-white);
+            font-size: 0.875rem;
+            padding-left: 0.9rem;
+            padding-right: 0.9rem;
+            margin: 0.5rem 0;
+        }
+    
+        .featured-products .card .card-body .card-old-price {
+            text-decoration: line-through;
+            margin: 0;
+        }
+        .featured-products .card .card-body .card-discount-price {
+            color: var(--color-theme);
+            font-weight: var(--font-weight-medium);
+            font-size: 1.5em;
+            margin: 0;
+        }
+
+    .featured-products .card .card-background {
+        position: absolute;
+        bottom: 0;
+        height: 15%;
+        width: 100%;
+        background-color: var(--color-theme-dark);
+        opacity: 0.90;
+        transition: height 0.3s ease-in-out;
+    }
+        .featured-products .card:hover .card-background {
+            height: 100%;
+        }
+
+    .featured-products .card .card-menu {
+        position: absolute;
+        z-index: 1;
+        top: 120%;
+        right: 5%;
+        list-style: none;
+        margin: auto;
+        padding: 0.5rem;
+        font-size: 1.25rem;
+        border-radius: var(--border-radius-medium);
+        background-color: var(--color-white);
+        transition: top 0.3s ease-in-out;
+    }
+        .featured-products .card:hover .card-menu {
+            top: 15px;
+        }
+
+        .featured-products .card .card-menu li {
+            margin-top: 0.2rem;
+            margin-bottom: 0.2rem;
+            font-size: 1.0em;
+        }
+            .featured-products .card .card-menu li a {
+                color: var(--color-gray-0);
+            }
+                .featured-products .card .card-menu li a:hover {
+                    color: var(--color-theme);
+                }
+
+
+/*------------------SHOWCASE-3-----------------------------*/
+
+.showcase-3 {
+    background-color: var(--color-theme-dark);
+    margin-top: 6rem;
+    height: 400px;
+}
+.showcase-3 .container {
+    text-align: center;
+    display: flex;
+    display: block;
+ }
+
+ .showcase-3 .info-box {
+    width: 250px;
+    height: 250px;
+    background-color: var(--color-theme);
+    display: flex;
+    display: inline-block;
+    margin-right: 500px;
+}
+
+ .showcase-3 .info-box h1 {
+     font-family: var(--font-play);
+     font-weight: var(--font-weight-bold);
+     font-size: 3.75rem;
+     color: var(--color-white);
+     padding-top: 1rem;
+ }
+
+ .showcase-3 .info-box p {
+    color: var(--color-white);
+ }
+
+.showcase-3 .container .count-down {
+    background-color: var(--color-white);
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: dotted #20D3C2;
+    display: flex;
+    display: inline-block;
+    margin: 0.5rem;
+}
+
+.showcase-3 .container .count-down h1 {
+    color: var(--color-theme);
+    margin: 0;
+    padding-top: 1rem;
+    font-size: 2.25rem;
+    font-weight: var(--font-weight-bold);
+    display: flex;
+    justify-content: center;
+
+}
+.showcase-3 .container .count-down p {
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
+}
+
+.button {
+    display: flex;
+    display: inline-block;
+    margin-bottom: 100px;
+    margin-left: 750px;
+}
+  
 
 /*------------------------------MEDIA----------------------------------------*/
 
