--- a/css/style.css
+++ b/css/style.css
@@ -825,6 +825,189 @@ html, body {
 }
   
 
+/*------------------------TOP-SELLERS----------------------------------------*/
+
+
+.top-sellers .grid {
+    display: grid;
+    position: absolute;
+    grid-gap: 10px;
+    grid-template-columns: 300px 200px;
+    grid-template-rows: 300px 200px;
+}
+
+#box-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+}
+#box-2 {
+    grid-column: 2 / -1;
+    grid-row: 1 / 2;
+}
+
+#box-3 {
+    grid-column: 2 / -1;
+    grid-row: 2 / -1;
+}
+
+.top-sellers .category-box {
+    position: relative;
+}
+
+.top-sellers {
+    padding-top: 6rem;
+}
+
+
+    .top-sellers .card {
+        position: relative;
+        height: 400px;
+        width: 350px;
+        overflow: hidden;
+        background-color: var(--color-gray-4);
+    }
+
+    .top-sellers .card img {
+        height: 400px;
+    }
+
+    .top-sellers .card .card-body {
+        position: relative;
+        bottom: 0;
+        height: 14%;
+        width: 100%;
+        color: var(--color-white);
+        z-index: 1;
+        transition: 0.3s ease-in-out;
+        font-size: 1rem;
+    }
+        .top-sellers .card:hover .card-body {
+            height: 40%;
+        }
+
+        .top-sellers .card .card-body h1 {
+            font-size: 1.125rem;
+            margin-bottom: 1rem;
+            transition: 0.3s ease-in-out;
+            font-weight: var(--font-weight-regular);
+        }
+            .top-sellers .card:hover .card-body h1 {
+                margin-bottom: 0;
+            }
+
+        .top-sellers .card .card-body button {
+            background-color: transparent;
+            color: var(--color-white);
+            border: 1px solid var(--color-white);
+            font-size: 0.875rem;
+            padding-left: 0.9rem;
+            padding-right: 0.9rem;
+            margin: 0.5rem 0;
+        }
+    
+        .top-sellers .card .card-body .card-old-price {
+            text-decoration: line-through;
+            margin: 0;
+        }
+        .top-sellers .card .card-body .card-discount-price {
+            color: var(--color-theme);
+            font-weight: var(--font-weight-medium);
+            font-size: 1.5em;
+            margin: 0;
+        }
+
+    .top-sellers .card .card-background {
+        position: absolute;
+        bottom: 0;
+        height: 15%;
+        width: 100%;
+        background-color: var(--color-theme-dark);
+        opacity: 0.90;
+        transition: height 0.3s ease-in-out;
+    }
+        .top-sellers .card:hover .card-background {
+            height: 100%;
+        }
+
+    .top-sellers .card .card-menu {
+        position: absolute;
+        z-index: 1;
+        top: 120%;
+        right: 5%;
+        list-style: none;
+        margin: auto;
+        padding: 0.5rem;
+        font-size: 1.25rem;
+        border-radius: var(--border-radius-medium);
+        background-color: var(--color-white);
+        transition: top 0.3s ease-in-out;
+    }
+        .top-sellers .card:hover .card-menu {
+            top: 15px;
+        }
+
+        .top-sellers .card .card-menu li {
+            margin-top: 0.2rem;
+            margin-bottom: 0.2rem;
+            font-size: 1.0em;
+        }
+            .top-sellers .card .card-menu li a {
+                color: var(--color-gray-0);
+            }
+                .top-sellers .card .card-menu li a:hover {
+                    color: var(--color-theme);
+                }
+
+
+
+
+
+
+
+
+
+/*--------------------SUBSCRIBE-NOW--------------------------------*/
+
+
+
+.showcase-4 {
+    background-color: var(--color-gray-4);
+}
+    .showcase-4 .container {
+       text-align: center;
+       display: flex;
+       justify-content: space-between;
+       align-items: center;
+    }
+
+    .showcase-4 .showcase-body h1 {
+        font-family: var(--font-play);
+        font-weight: var(--font-weight-bold);
+        font-size: 3rem;
+        padding-bottom: 0;
+        margin-bottom: 0;
+        border-bottom: 0;
+    }
+        .showcase-4 .showcase-body h1 strong {
+            color: var(--color-theme);
+        } 
+
+    .showcase-4 .showcase-body p {
+        margin: 2rem 0;
+        font-size: 1rem;
+        text-align: center;
+    }
+
+
+
+
+
+
+
+
+
+
+
 /*------------------------------MEDIA----------------------------------------*/
 
 
