--- a/css/style.css
+++ b/css/style.css
@@ -646,7 +646,7 @@ html, body {
  }
 
 
-/*----------------------FEATURED-PRODUCTS---------------*/
+/*--------------------------------FEATURED-PRODUCTS-------------------------------*/
 
 .featured-products {
     padding-top: 6rem;
@@ -830,49 +830,29 @@ html, body {
 
 .top-sellers .grid {
     display: grid;
+    gap: 0.8rem;
+    grid-template-columns: repeat(2, minmax(300px, 300px));
+    grid-template-rows: repeat(2, minmax(300px, 300px));
+}
+.top-sellers .grid .card-box {
     position: absolute;
-    grid-gap: 10px;
-    grid-template-columns: 300px 200px;
-    grid-template-rows: 300px 200px;
-}
-
-#box-1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / -1;
-}
-#box-2 {
-    grid-column: 2 / -1;
-    grid-row: 1 / 2;
-}
-
-#box-3 {
-    grid-column: 2 / -1;
-    grid-row: 2 / -1;
-}
-
-.top-sellers .category-box {
-    position: relative;
-}
-
-.top-sellers {
-    padding-top: 6rem;
 }
 
 
     .top-sellers .card {
         position: relative;
-        height: 400px;
-        width: 350px;
+        height: auto;
+        width: auto;
         overflow: hidden;
         background-color: var(--color-gray-4);
     }
 
     .top-sellers .card img {
-        height: 400px;
+        height: auto;
     }
 
     .top-sellers .card .card-body {
-        position: relative;
+        position: absolute;
         bottom: 0;
         height: 14%;
         width: 100%;
@@ -959,9 +939,18 @@ html, body {
                 }
 
 
-
-
-
+#card-box-1 {
+    grid-column: 1 / 2;
+    grid-row: 1 / -1;
+}
+#card-box-2 {
+    grid-column: 2 / -1;
+    grid-row: 1 / 2;
+}
+#card-box-3 {
+    grid-column: 2 / -1;
+    grid-row: 2 / -1;
+}
 
 
 
@@ -970,17 +959,18 @@ html, body {
 
 
 
-.showcase-4 {
+
+.subscribe-now {
     background-color: var(--color-gray-4);
 }
-    .showcase-4 .container {
+    .subscribe-now .container {
        text-align: center;
        display: flex;
        justify-content: space-between;
        align-items: center;
     }
 
-    .showcase-4 .showcase-body h1 {
+    .subscribe-now .subscribe-now-body h1 {
         font-family: var(--font-play);
         font-weight: var(--font-weight-bold);
         font-size: 3rem;
@@ -988,21 +978,36 @@ html, body {
         margin-bottom: 0;
         border-bottom: 0;
     }
-        .showcase-4 .showcase-body h1 strong {
+        .subscribe-now .subscribe-now-body h1 strong {
             color: var(--color-theme);
         } 
 
-    .showcase-4 .showcase-body p {
-        margin: 2rem 0;
+    .subscribe-now .subscribe-now-body p {
+        margin: 1rem 0;
         font-size: 1rem;
-        text-align: center;
+        text-align: left;
+        width: 400px;
+        padding-left: 10px;
     }
 
 
 
 
+/*-------------------------BOTTOM-LINE-------------------------------*/
 
 
+
+
+.bottom-line {
+    background-color: var(--color-theme-dark);
+}
+
+    .bottom-line .copyright {
+        color: var(--color-white);
+        padding-top: 1.2rem;
+        padding-bottom: .08rem;
+        font-size: var(--font-size-16);
+    }
 
 
 
