--- a/css/style.css
+++ b/css/style.css
@@ -831,13 +831,10 @@ html, body {
 .top-sellers .grid {
     display: grid;
     gap: 0.8rem;
-    grid-template-columns: repeat(2, minmax(300px, 300px));
-    grid-template-rows: repeat(2, minmax(300px, 300px));
+    grid-template-columns: repeat(2,minmax(200px, 300px));
+    grid-template-rows: repeat(2,minmax(200px, 300px));
+    justify-content: center;
 }
-.top-sellers .grid .card-box {
-    position: absolute;
-}
-
 
     .top-sellers .card {
         position: relative;
@@ -939,18 +936,18 @@ html, body {
                 }
 
 
-#card-box-1 {
-    grid-column: 1 / 2;
-    grid-row: 1 / -1;
-}
-#card-box-2 {
-    grid-column: 2 / -1;
-    grid-row: 1 / 2;
-}
-#card-box-3 {
-    grid-column: 2 / -1;
-    grid-row: 2 / -1;
-}
+ #card-box-1 {
+   grid-column: 1/3;
+   grid-row: 1/-1;
+ }
+ #card-box-2 {
+   grid-column: 2/3;
+   grid-row: 1/2;
+ }
+ #card-box-3 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+ }
 
 
 
