--- a/css/style.css
+++ b/css/style.css
@@ -831,8 +831,8 @@ html, body {
 .top-sellers .grid {
     display: grid;
     gap: 0.8rem;
-    grid-template-columns: repeat(2,minmax(200px, 300px));
-    grid-template-rows: repeat(2,minmax(200px, 300px));
+    grid-template-columns: repeat(2,minmax(300px, 400px));
+    grid-template-rows: repeat(2,minmax(200px, 250px));
     justify-content: center;
 }
 
@@ -937,16 +937,16 @@ html, body {
 
 
  #card-box-1 {
-   grid-column: 1/3;
+   grid-column: 1/2;
    grid-row: 1/-1;
  }
  #card-box-2 {
-   grid-column: 2/3;
+   grid-column: 2/-1;
    grid-row: 1/2;
  }
- #card-box-3 {
-    grid-column: 2/3;
-    grid-row: 2/3;
+#card-box-3 {
+    grid-column: 2/-1;
+    grid-row: 2/-1;
  }
 
 
@@ -955,10 +955,9 @@ html, body {
 /*--------------------SUBSCRIBE-NOW--------------------------------*/
 
 
-
-
 .subscribe-now {
     background-color: var(--color-gray-4);
+    margin-top: 6rem;
 }
     .subscribe-now .container {
        text-align: center;
