--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,19 @@ html, body {
         color: var(--color-theme);
     }
 
+.btn-theme-2 {
+    background-color: var(--color-white);
+    color: var(--color-theme);
+    border-radius: var(--border-radius-medium);
+    font-weight: var(--font-weight-medium);
+    padding-left: 1.75rem;
+    padding-right: 1.75rem;
+}
+    .btn-theme-2:hover {
+        background-color: var(--color-theme);
+        color: var(--color-white);
+    }
+
 .btn-white {
     background-color: var(--color-white);
     color: var(--color-theme);
