--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     --color-theme: #20D3C2;
     --color-theme-light: #EDFCFA;
     --color-theme-dark: #0E153D;
+    --color-theme-dark-light: #50546E;
     --color-dark: #080C24;
     --color-white: #FFFFFF;
     --color-gray-0: #AAAAAA;
@@ -1029,6 +1030,67 @@ html, body {
         padding-bottom: .08rem;
         font-size: var(--font-size-16);
     }
+
+
+
+
+
+
+
+/*--------------ACCOUNT-HTML--------------------*/
+
+
+
+
+
+/*------------SITE-TITLE-----------------------*/
+
+
+.site-title {
+    background-color: var(--color-theme-dark-light);
+    color: var(--color-white);
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+}
+
+.site-title .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.site-title h1 {
+    margin: 0;
+    color: var(--color-theme);
+    font-size: 1.5rem;
+    font-family: var(--font-roboto);
+    font-weight: var(--font-weight-medium);
+}
+
+.site-title ul.breadcrumb {
+    list-style: none;
+    margin: 0;
+  }
+    .site-title ul.breadcrumb li {
+        display: inline;
+        font-size: 18px;
+    }
+        .site-title ul.breadcrumb li+li:before {
+            padding: 0 0.7rem 0 1rem;
+            color: var(--color-white);
+            content: "/\00a0";
+        }
+        .site-title ul.breadcrumb li a {
+            color: var(--color-theme);
+            text-decoration: none;
+        }
+            .site-title ul.breadcrumb li a:hover {
+                color: var(--color-theme-light);
+            }
+
+
+
+
 
 
 
