--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ html, body {
     color: var(--color-theme-dark);
 }
 
-    .main-menu .container {
+    .main-menu > .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -287,17 +287,19 @@ html, body {
 
     .main-menu nav {
          border-top: 1px solid var(--color-gray-2);
-         border-bottom: 1px solid var(--color-gray-2)
+         border-bottom: 1px solid var(--color-gray-2);
     }
-        .main-menu > nav > .container {
-             display: flex;
-             justify-content: space-between;
-             align-items: center;
-             padding: 0;
+        .main-menu  nav  .container {
+            text-align: center;
+            display: flex;
+            justify-content: space-between;
+            padding: 0;
+            margin-bottom: 0;
         }
 
         .main-menu nav .browse-categories {
               flex: 2;
+              display: flex;
         }
             
               .main-menu nav .browse-categories button {
@@ -311,6 +313,7 @@ html, body {
                    align-items: center;
                    padding: 0.7rem 1rem;
                    transition: 0.15s ease-in-out;
+                   margin: 0;
                }
                   .main-menu nav .browse-categories button:hover {
                     background-color: var(--color-theme-dark);
@@ -344,7 +347,9 @@ html, body {
              justify-content: end;
              align-items: center;
         }
-
+         .main-menu nav .special-offer button {
+            margin: 0;
+         }
 
 
 
