--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@
     --color-gray-2: #E3E3E3;
     --color-gray-3: #EEEEEE;
     --color-gray-4: #F6F6F6;
+    --color-gray-5: #777777;
     --color-product-instock: #82D8C6;
     --color-product-outofstock: #FE6C6C;
 
@@ -1095,7 +1096,35 @@ html, body {
 
 
 
+/*----------------------------SIGNUP-SIGNIN------------------------*/
 
+
+.signup-signin {
+    padding: 6rem 0;
+}
+
+    .signup-signin .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        column-gap: 2rem;
+    }
+.signup-signin .card {
+
+}
+
+    .signup-signin .card .card-body {
+
+        }
+        .signup-signin .card .card-body h1 {
+
+        }
+            .signup-signin .card .card-body .card-text {
+
+            }
+            .signup-signin .card .card-body .card-text-small {
+                color: var(--color-gray-5);
+                font-size: 0.875rem;
+            }
 
 
 
