--- a/css/style.css
+++ b/css/style.css
@@ -113,6 +113,11 @@ html, body {
     color: var(--color-product-outofstock);
 }
 
+.required {
+    color: var(--color-theme);
+}
+
+
 .section-title {
     padding: 3rem 0;
     color: var(--color-theme-dark);
@@ -1107,26 +1112,57 @@ html, body {
         display: grid;
         grid-template-columns: 1fr 1fr;
         column-gap: 2rem;
+        align-items: start;
     }
-.signup-signin .card {
 
+.signup-signin .card {
+    padding: 1.5rem;
+    border: none;
+    border-radius: var(--border-radius-small);
+    background-color: var(--color-gray-4);
 }
 
-    .signup-signin .card .card-body {
+    .signup-signin .card .card-body h1 {
+        font-family: var(--font-roboto);
+        font-weight: var(--font-weight-medium);
+        color: var(--color-theme-dark);
+        font-size: 1.5rem;
+    }
 
+        .signup-signin .card .card-body .card-text {
+            margin: 1.5rem 0;
+            line-height: 2;
         }
-        .signup-signin .card .card-body h1 {
 
+        .signup-signin .card .card-body .card-text a {
+            color: var(--color-theme);
+            text-decoration: none;
+            font-weight: var(--font-weight-medium);
         }
-            .signup-signin .card .card-body .card-text {
-
-            }
-            .signup-signin .card .card-body .card-text-small {
-                color: var(--color-gray-5);
-                font-size: 0.875rem;
+            .signup-signin .card .card-body .card-text a:hover {
+                color:blue;
             }
 
+        .signup-signin .card .card-body .card-text.text-small {
+            color: var(--color-gray-5);
+            font-size: 0.875rem;
+        }
 
+
+#signupForm input {
+    display: block;
+    width: 100%;
+    border: none;
+    border-radius: var(--border-radius-small);
+    padding: 0.5rem;
+    margin: 0.4rem 0;
+
+}
+    #signupForm input:focus {
+        outline: 0;
+        box-shadow: 0 0 2px 0 var(--color-theme-dark);
+
+    }
 
 
 
