--- a/css/style.css
+++ b/css/style.css
@@ -139,6 +139,67 @@ html, body {
 
 
 
+
+.form-theme .card {
+padding: 1.5rem;
+border: none;
+border-radius: var(--border-radius-small);
+background-color: var(--color-gray-4);
+}
+
+.form-theme .card .card-body h1 {
+    font-family: var(--font-roboto);
+    font-weight: var(--font-weight-medium);
+    color: var(--color-theme-dark);
+    font-size: 1.5rem;
+}
+
+    .form-theme .card .card-body .card-text {
+        margin: 1.5rem 0;
+        line-height: 2;
+    }
+
+    .form-theme .card .card-body .card-text a {
+        color: var(--color-theme);
+        text-decoration: none;
+        font-weight: var(--font-weight-medium);
+    }
+        .form-theme .card .card-body .card-text a:hover {
+            color:blue;
+        }
+
+    .form-theme .card .card-body .card-text.text-small {
+    color: var(--color-gray-5);
+    font-size: 0.875rem;
+    }
+
+.form-theme form input[type=checkbox] {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+}
+
+
+.form-theme form input[type=text],
+.form-theme form input[type=email],
+.form-theme form input[type=password] {
+display: block;
+width: 100%;
+border: none;
+border-radius: var(--border-radius-small);
+padding: 0.5rem;
+margin: 0.4rem 0;
+}
+    .form-theme form input:focus {
+        outline: 0;
+        box-shadow: 0 0 2px 0 var(--color-theme-dark);
+    }
+
+
+
+
+
+
 /*-------------------------------TOP-MENU------------------------------------*/
 
 
@@ -1103,7 +1164,6 @@ html, body {
 
 /*----------------------------SIGNUP-SIGNIN------------------------*/
 
-
 .signup-signin {
     padding: 6rem 0;
 }
@@ -1115,55 +1175,9 @@ html, body {
         align-items: start;
     }
 
-.signup-signin .card {
-    padding: 1.5rem;
-    border: none;
-    border-radius: var(--border-radius-small);
-    background-color: var(--color-gray-4);
+.signup-signin .container .card button {
+    margin: 0;
 }
-
-    .signup-signin .card .card-body h1 {
-        font-family: var(--font-roboto);
-        font-weight: var(--font-weight-medium);
-        color: var(--color-theme-dark);
-        font-size: 1.5rem;
-    }
-
-        .signup-signin .card .card-body .card-text {
-            margin: 1.5rem 0;
-            line-height: 2;
-        }
-
-        .signup-signin .card .card-body .card-text a {
-            color: var(--color-theme);
-            text-decoration: none;
-            font-weight: var(--font-weight-medium);
-        }
-            .signup-signin .card .card-body .card-text a:hover {
-                color:blue;
-            }
-
-        .signup-signin .card .card-body .card-text.text-small {
-            color: var(--color-gray-5);
-            font-size: 0.875rem;
-        }
-
-
-#signupForm input {
-    display: block;
-    width: 100%;
-    border: none;
-    border-radius: var(--border-radius-small);
-    padding: 0.5rem;
-    margin: 0.4rem 0;
-
-}
-    #signupForm input:focus {
-        outline: 0;
-        box-shadow: 0 0 2px 0 var(--color-theme-dark);
-
-    }
-
 
 
 /*------------------------------MEDIA----------------------------------------*/
