--- a/css/style.css
+++ b/css/style.css
@@ -1212,8 +1212,6 @@ margin: 0.4rem 0;
         font-size: 1rem;
         text-align: left;
         width: 400px;
-        padding-left: 10px;
-        padding-left: 0;
     }
 
     .subscribe-now .search #searchboxForm {
@@ -1221,7 +1219,7 @@ margin: 0.4rem 0;
         height: 50px;
         margin: auto;
         position: relative;
-        right: 10rem;
+        right: 10.5rem;
         padding-top: 0.5rem;
         width: 450px;
     }
@@ -1232,15 +1230,15 @@ margin: 0.4rem 0;
             height: 100%;
             width: 100%;
             outline: none;
-            border: 1px solid var(--color-gray-5);
+            border: 1px solid var(--color-gray-1);
             font-size: 0.9rem;
-            padding-left: 0.5rem;
+            padding-left: 1rem;
         }
 
         .subscribe-now .search #searchboxForm button {
             position: relative;
             top: 0.3rem;
-            left: 19rem;
+            left: 20.4rem;
             width: 120px;
             height: 95%;
             background-color: var(--color-theme);
@@ -1253,9 +1251,10 @@ margin: 0.4rem 0;
                 background-color: var(--color-theme-dark);
             }
 
-        .subscribe-now .search #searchboxForm  p {
-            text-align: center;
-            justify-content: center;
+        .subscribe-now .search #searchboxForm button,p {
+            padding-top: 0.36rem;
+            font: var(--font-roboto);
+            font-size: var(--font-size-16);
         }
 
 
