--- a/css/style.css
+++ b/css/style.css
@@ -767,7 +767,18 @@ margin: 0.4rem 0;
             }
 
 
-
+        .new-arrivals .card-menu #magnifying-glass img {
+            height: 100px;
+            width: 100px;
+            position: absolute;
+            right: 2.4rem;
+            top: 4.7rem;
+            opacity: 0;
+            pointer-events: none;
+        }
+            .new-arrivals .card-menu #magnifying-glass:hover img {
+                opacity: 1;
+            }
 /*-------------------------------THE SHOWCASE 2------------------------------*/
 
 .showcase-2 {
@@ -946,7 +957,19 @@ margin: 0.4rem 0;
         }
         
 
-
+    .featured-products .card-menu #magnifying-glass img {
+        height: 100px;
+        width: 100px;
+        position: absolute;
+        right: 2.4rem;
+        top: 4.7rem;
+        opacity: 0;
+        pointer-events: none;
+    }
+        .featured-products .card-menu #magnifying-glass:hover img {
+            opacity: 1;
+        }
+        
 /*------------------------------THE SHOWCASE 3---------------------------------*/
 
 .showcase-3 {
