--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@
 
 
 
-/*-------------------------------The general styles for the website----------------------------------*/
+/*--------------------------General styles for the website---------------------------*/
 
 
 html, body {
@@ -209,7 +209,7 @@ margin: 0.4rem 0;
 
 
 
-/*---------------------------THE TOP MENU-----------------------------*/
+/*--------------------------- TOP MENU-----------------------------*/
 
 
 .top-menu {
@@ -297,7 +297,7 @@ margin: 0.4rem 0;
 
 
 
-/*--------------------------------THE MAIN MENU------------------------------------*/
+/*-------------------------------- MAIN MENU------------------------------------*/
 
 
 .main-menu {
@@ -483,7 +483,7 @@ margin: 0.4rem 0;
 
 
 
-/*--------------------------THE SHOWCASE--------------------------*/
+/*-------------------------- SHOWCASE--------------------------*/
 
 .showcase {
     background-color: var(--color-gray-3);
@@ -516,7 +516,7 @@ margin: 0.4rem 0;
 
 
 
-/*---------------------------THE WEBSHOP INFO--------------------------*/
+/*--------------------------- WEBSHOP INFO--------------------------*/
 
 .webshop-info {
     padding: 4rem 0;
@@ -567,7 +567,7 @@ margin: 0.4rem 0;
 
 
 
-/*-------------------------THE SHOP BY CATEGORY---------------------------*/
+/*------------------------- SHOP BY CATEGORY---------------------------*/
 
 .shop-by-category .grid {
     display: grid;
@@ -643,7 +643,7 @@ margin: 0.4rem 0;
 
 
 
-/*---------------------------THE NEW ARRIVALS------------------------------*/
+/*--------------------------- NEW ARRIVALS------------------------------*/
 
 .new-arrivals {
     padding-top: 6rem;
@@ -779,7 +779,7 @@ margin: 0.4rem 0;
             .new-arrivals .card-menu #magnifying-glass:hover img {
                 opacity: 1;
             }
-/*-------------------------------THE SHOWCASE 2------------------------------*/
+/*-------------------------------SHOWCASE 2------------------------------*/
 
 .showcase-2 {
     background-color: var(--color-gray-1);
@@ -833,7 +833,7 @@ margin: 0.4rem 0;
 
 
 
-/*--------------------------------THE FEATURED PRODUCTS-------------------------------*/
+/*------------------------------ FEATURED PRODUCTS-------------------------------*/
 
 .featured-products {
     padding-top: 6rem;
@@ -970,7 +970,7 @@ margin: 0.4rem 0;
             opacity: 1;
         }
         
-/*------------------------------THE SHOWCASE 3---------------------------------*/
+/*------------------------------ SHOWCASE 3---------------------------------*/
 
 .showcase-3 {
     background-color: var(--color-theme-dark);
@@ -1037,7 +1037,7 @@ margin: 0.4rem 0;
 }
   
 
-/*------------------------THE TOP SELLERS----------------------------------*/
+/*------------------------ TOP SELLERS----------------------------------*/
 
 .top-sellers .grid {
     display: grid;
@@ -1206,7 +1206,7 @@ margin: 0.4rem 0;
 
 
 
-/*---------------------------THE SUBSCRIBE NOW--------------------------------*/
+/*--------------------------- SUBSCRIBE NOW--------------------------------*/
 
 .subscribe-now {
     background-color: var(--color-gray-4);
@@ -1281,7 +1281,7 @@ margin: 0.4rem 0;
         }
 
 
-/*-------------------------THE BOTTOM LINE-------------------------------*/
+/*-------------------------BOTTOM LINE OF WEBSITE-------------------------------*/
 
 .bottom-line {
     background-color: var(--color-theme-dark);
@@ -1345,7 +1345,7 @@ margin: 0.4rem 0;
 
 
 
-/*----------------------------THE SIGNUP SIGNIN------------------------*/
+/*----------------------------SIGNUP SIGNIN FORMS------------------------*/
 
 .signup-signin {
     padding: 6rem 0;
